<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TuList!!</string>
    <string name="description">
        El gestor de tareas que mejor se adecúa a tus necesidades
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Abrir barra de navegación</string>
    <string name="navigation_drawer_close">Cerrar barra de navegación</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Tareas</string>
    <string name="menu_slideshow">Amigos</string>
    <string name="sigin">Acceder</string>
    <string name="register">Registrarse</string>
    <string name="follow">Seguir</string>
    <string name="follow_message">Estas siguiendo a</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boards">Tableros</string>
    <string name="add_board">Agregar tablero</string>
    <string name="favorites">Favoritos</string>
    <string name="favorites_message">Agregado a la lista de favoritos</string>
    <string name="empty">No se encontraron tableros favoritos</string>
    <string name="board_not_found_message">No se encontraron tableros </string>

    <!--adding new board streings-->
    <string name="add_new">Agregar nuevo tablero</string>
    <string name="delete_board">Eliminar tablero</string>
    <string name="details_board">Detalles</string>
    <string name="img_board">Adjuntar imagen</string>
    <string name="add">Agregar</string>
    <string name="title">Título</string>
    <string name="empty_field">Este campo es requerido</string>
    <string name="question">¿Se eliminara un tablero de forma permanente?</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="nothing_to_show">No hay informacion disponible sobre este tablero</string>
</resources>